<resources>
    <string name="app_name">SaveTheChildren</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="upload">Upload</string>
    <string name="new_report">New Report</string>
    <string name="new_stock">New Stock</string>
    <string name="view_reports">View Reports</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fluid">Fluid</string>
    <string name="muac">MUAC</string>
    <string name="wfh_bmi">WFH/BMI</string>
    <string name="total_beginning_of_period">Total Beginning of Period</string>
    <string name="oedema">Oedema</string>
    <string name="relapse">Relapse</string>
    <string name="re_admission">Re-admission</string>
    <string name="next">next</string>
</resources>
