<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.cmamreport.savethechildren.MainActivity">

    <Button
        android:id="@+id/upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:layout_weight="1"
        android:elevation="0dp" />

    <Button
        android:id="@+id/newReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_report"
        android:layout_weight="1" />

    <Button
        android:id="@+id/newStock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_stock"
        android:layout_weight="1" />

    <Button
        android:id="@+id/viewReports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_reports"
        android:layout_weight="1" />
</LinearLayout>

